# create-near-app

./: .eslintignore  .eslintrc.yml  .gitignore  .gitpod.yml  .npmignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ava.config.cjs  index.js  jest.config.js  near.gitignore  package-lock.json  package.json  pnpm-lock.yaml  react.js  rustup-setup.js  tracking.js  tsconfig.json
.dependabot/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: add-to-devrel.yml  assign-issues.yml  codeql.yml  lint.yml  linter.yml  test-contract-py.yml  test-contract-rs.yml  test-contract-ts.yml  test-contract.yml  test-e2e.yml  test-frontend.yml  test-matrix.yml
NFT-project/: README.md  package.json
NFT-project/contract/: Cargo.toml  README.md
NFT-project/contract/src/: approval.rs  enumeration.rs  internal.rs  lib.rs  metadata.rs  mint.rs  nft_core.rs  royalty.rs
NFT-project/src/: config.js  index.html  index.js  main.test.js  utils.js
blank_project/: .gitignore  README.md  asconfig.js  gulpfile.js  near.gitignore  package.json
blank_project/assembly/: model.ts
blank_project/src/: config.js  index.html  main.js  main.test.js  test.js
blank_project/src/fonts/: BwSeidoRound900.eot
blank_react_project/: .gitignore  README.md  asconfig.js  gulpfile.js  package.json
blank_react_project/assembly/: main.ts  model.ts
blank_react_project/neardev/default/: react-template.json  react.json
blank_react_project/public/: index.html  manifest.json
blank_react_project/src/: App.css  App.js  App.test.js  config.js  index.html  index.js  main.test.js
blank_react_project/src/__mocks__/: fileMock.js
blank_react_project/src/__snapshots__/: App.test.js.snap
blank_rust_project/: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  gulpfile.js  near.gitignore  package.json
blank_rust_project/contract/: Cargo.toml  build.sh
blank_rust_project/contract/src/: lib.rs
blank_rust_project/src/: config.js  index.html  main.js  main.test.js
blank_rust_react_project/: README.md  near.gitignore  package.json
blank_rust_react_project/neardev/: .gitignore
blank_rust_react_project/src/: App.css  App.js  App.test.js  config.js  index.js  main.test.js
blank_rust_react_project/src/__snapshots__/: App.test.js.snap
blank_rust_react_project/src/fonts/: BwSeidoRound500.eot
common/: .npmignore
common/contracts/asc/: main.ts
common/contracts/assemblyscript/: README.md  compile  compile.js  main.ts  package.json  test
common/contracts/rust/: Cargo.toml  README.md  build.js  compile  compile.js  test
common/frontend/: config.js  global.css  utils.js
common/rust/: build.js
contract/asc/: docsnippets.xml  main.ts  model.ts  types.d.ts
contract/asc/__tests__/: context.json  main.spec.ts
contract/rust/: Cargo.toml  build.js  build.sh
contract/rust/.cargo/: config
contract/rust/src/: lib.rs
contracts/assemblyscript/: .gitignore  README.md  package.json
contracts/assemblyscript/assembly/: index.ts
contracts/js/: .gitignore  package.json
contracts/js/src/: contract.js
contracts/rust/: Cargo.toml  README.md
debug/: make.sh
integration-tests/js/: package.json
integration-tests/js/src/: config.ts  main.ava.ts
integration-tests/tests/: package.json
integration-tests/ts/: ava.config.cjs  package.json
integration-tests/workspaces-js-tests/src/: main.ava.ts
integration-tests/workspaces-rs-tests/src/: tests.rs
integration-tests/workspaces-tests/ts/: package.json
scaffold/: checks.js  make.js  package-json.js  tracking.js  user-input.js
scripts/: near-shell-check.js
src/: app.js  app.js.map  app.ts  checks.js.map  checks.ts  make.js  make.js.map  make.ts  messages.ts  package-json.js.map  package-json.ts  tracking.js.map  tracking.ts  types.ts  user-input.js  user-input.js.map  user-input.ts  yarn-lock.ts
src/utils/: checkCargoNear.ts  donwloadFile.ts  index.ts
templates/: .npmignore
templates/angular/: .gitignore  .gitpod.yml  README.md  angular.json  asconfig.json  contract  extra-webpack.config.ts  karma.conf.js  near.gitignore  package.json  set-contract-name.js  set-contract-name.ts  tsconfig.json  tslint.json
templates/angular/src/: config.d.ts  config.js  config.ts  contract-name.ts  index.html  main.ts  polyfills.ts  test.ts  utils.d.ts  window.d.ts
templates/contract/: package.json
templates/contracts/: .gitignore
templates/contracts/assemblyscript/: README.md  package-lock.json  package.json
templates/contracts/auction-adv/rs/: Cargo.toml  README.md  rust-toolchain.toml
templates/contracts/auction-adv/rs/src/: ext.rs  lib.rs
templates/contracts/auction-adv/rs/tests/: fungible_token.wasm  non_fungible_token.wasm  test_basics.rs
templates/contracts/auction/rs/: Cargo.toml  README.md
templates/contracts/auction/rs/src/: lib.rs
templates/contracts/auction/rs/tests/: test_basics.rs
templates/contracts/js/: .gitignore  README.md  (+5 more)
templates/contracts/rs/: Cargo.toml  README.md  build.sh  deploy.sh  rust-toolchain.toml  test-rs.sh  test-ts.sh
templates/contracts/rs/.github/workflows/: deploy-production.yml  deploy-staging.yml  test.yml  undeploy-staging.yml
templates/contracts/rs/src/: lib.rs
templates/contracts/rs/tests/: test_basics.rs
templates/none/: README.md  package.json
templates/react/: .gitignore  README.md  as-pect.config.js  asconfig.js  asconfig.json  near.gitignore  package.json
templates/shared/: .gitpod.yml  README.md  near.gitignore  package-lock.json  pnpm-workspace.yaml
templates/vanilla/: README.md  asconfig.json  assembly  ava.config.cjs  integration-tests  near.gitignore  package.json
templates/vue/: README.md  as-pect.config.js  asconfig.json  contract  copy-dev-account.js  jest.config.js  near.gitignore  package.json
templates/vue3/: asconfig.js  copy-dev-account.js  package.json  vue.config.js
test/: e2e-ci.sh  e2e.sh  make.test.ts  test-new-project.js  test_new_project.sh  tsconfig.json  user-input.test.ts
test-app/: Cargo.toml
test/__snapshots__/: make.test.ts.snap  user-input.test.ts.snap
utils/: rust-setup.js  tracking.js
(+407 files in other folders)
